--- a/theme/dark.css
+++ b/theme/dark.css
@@ -23,7 +23,7 @@ body {
   top: 0;
   left: 0;
   height: 100dvh;
-  overflow-y: hidden;
+  overflow-y: auto;
   width: 20%;
   transition: 0.3s ease all;
 }
@@ -167,6 +167,7 @@ body {
     transition: 0.3s all ease;
   }
   .sidebar.mobile {
+    overflow-x: auto;
     left: 0;
     width: 60%;
     z-index: 1;
